--- a/gb/24/10/12/n14348960.md
+++ b/gb/24/10/12/n14348960.md
@@ -3,57 +3,56 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>组图：纽约上州熊山出现罕见绚丽极光</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348973-177979-600x400.jpg" />
-<h6>2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）
-</h6>
+<h6>2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</h6>
 <hr>
 	<p>【大纪元2024年10月12日讯】（大纪元纽约记者站报导）10月10日晚间，太阳风暴引发的强烈磁暴来袭，在地球磁场和大气的共同作用下，纽约上州的熊山上空罕见出现了绚丽的极光现象，色彩斑斓、变化万千，吸引天文爱好者驻足观赏。</p>
 <p>这次的极光现象之所以能够在纽约上州地区被清晰目睹，主要是因为地磁风暴强度异常，加上纽约上州的天空无云，光害影响也较小，使得熊山成为较佳的观赏地点。</p>
-<figure id="14348977" aria-describedby="caption-14348977" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348977-177983-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348977-177983-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348977" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348976" aria-describedby="caption-14348976" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348976-177982-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348976-177982-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348976" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348975" aria-describedby="caption-14348975" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348975-177981-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348975-177981-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348975" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348974" aria-describedby="caption-14348974" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348974-177980-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348974-177980-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348974" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348972" aria-describedby="caption-14348972" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348972-177978-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348972-177978-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348972" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348971" aria-describedby="caption-14348971" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348971-177977-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348971-177977-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348971" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348970" aria-describedby="caption-14348970" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348970-177976-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348970-177976-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348970" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348969" aria-describedby="caption-14348969" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348969-177975-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348969-177975-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348969" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348968" aria-describedby="caption-14348968" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348968-177974-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348968-177974-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348968" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348967" aria-describedby="caption-14348967" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348967-177973-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348967-177973-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348967" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348966" aria-describedby="caption-14348966" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348966-177972-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348966-177972-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348966" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348965" aria-describedby="caption-14348965" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348965-177971-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348965-177971-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348965" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348964" aria-describedby="caption-14348964" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348964-177970-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348964-177970-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348964" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348963" aria-describedby="caption-14348963" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348963-177969-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348963-177969-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348963" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348962" aria-describedby="caption-14348962" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348962-177968-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348962-177968-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348962" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="14348961" aria-describedby="caption-14348961" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348961-177967-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348961-177967-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500" /></a><figcaption id="caption-14348961" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
-<figure id="attachment_14349013" aria-describedby="caption-attachment-14349013" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/10/id14349013-be33da3716d1b52de7f865bb.jpg"><img decoding="async" class="size-medium wp-image-14349013" src="https://i.epochtimes.com/assets/uploads/2024/10/id14349013-be33da3716d1b52de7f865bb-450x338.jpg" alt="" width="500" b="338" /></a><figcaption id="caption-attachment-14349013" class="wp-caption-text">2024年10月10日晚间，纽约上州Middletown出现的极光。（黄俪提供）</figcaption></figure>
+<figure id="14348977" aria-describedby="caption-14348977" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348977-177983-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348977-177983-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348977" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348976" aria-describedby="caption-14348976" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348976-177982-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348976-177982-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348976" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348975" aria-describedby="caption-14348975" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348975-177981-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348975-177981-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348975" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348974" aria-describedby="caption-14348974" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348974-177980-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348974-177980-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348974" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348972" aria-describedby="caption-14348972" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348972-177978-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348972-177978-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348972" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348971" aria-describedby="caption-14348971" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348971-177977-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348971-177977-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348971" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348970" aria-describedby="caption-14348970" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348970-177976-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348970-177976-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348970" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348969" aria-describedby="caption-14348969" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348969-177975-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348969-177975-450x338.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348969" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348968" aria-describedby="caption-14348968" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348968-177974-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348968-177974-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348968" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348967" aria-describedby="caption-14348967" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348967-177973-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348967-177973-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348967" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348966" aria-describedby="caption-14348966" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348966-177972-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348966-177972-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348966" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348965" aria-describedby="caption-14348965" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348965-177971-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348965-177971-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348965" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348964" aria-describedby="caption-14348964" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348964-177970-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348964-177970-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348964" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348963" aria-describedby="caption-14348963" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348963-177969-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348963-177969-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348963" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348962" aria-describedby="caption-14348962" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348962-177968-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348962-177968-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348962" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="14348961" aria-describedby="caption-14348961" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/10/id14348961-177967-450x600.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/10/id14348961-177967-450x600.jpg" alt="2024年10月10日晚间，纽约上州熊山上空出现的极光。" width="500"/></a><figcaption id="caption-14348961" class="wp-caption-text">2024年10月10日晚间，纽约上州熊山上空出现的极光。（Rita Qi／新唐人电视台）</figcaption></figure>
+<figure id="attachment_14349013" aria-describedby="caption-attachment-14349013" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/10/id14349013-be33da3716d1b52de7f865bb.jpg" rel="nofollow"><img decoding="async" class="size-medium wp-image-14349013" src="https://i.epochtimes.com/assets/uploads/2024/10/id14349013-be33da3716d1b52de7f865bb-450x338.jpg" alt="" width="500" b="338"></a><figcaption id="caption-attachment-14349013" class="wp-caption-text">2024年10月10日晚间，纽约上州Middletown出现的极光。（黄俪提供）</figcaption></figure>
 <p>责任编辑：孙芸#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/17/n14553223.md#1">搁浅美国南卡潟湖 “幸运”海豚获救</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/17/n14553209.md#1">汗流浃背会导致机场安检搜身？TSA官员揭秘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/17/n14553125.md#1">7.20法轮功反迫害电影巡礼 守护良知与真相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/17/n14553217.md#1">羊头湾游民所争议 工程师证词揭申请漏洞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10235717.md#1" target="_blank">袁斌：重温“革命烈士”夏明翰的《就义诗》（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/6/n11705340.md#1" target="_blank">修炼真善忍 “巨型脑肿瘤”不治而愈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/22/n11814019.md#1" target="_blank">夏林：中共是国民党大选惨败的根本原因</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/5/n10830342.md#1" target="_blank">走出磨难 费城女医生找到真正的自我</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542412.md#1">【古道人生】女子嫌贫悔婚 媒人自荐女儿代替后成一品夫人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385712.md#1">【古道人生】盗贼刘雄飞知恩厚报</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/12/n14550235.md#1">【未解之谜】从沙漠烈焰到神秘圆洞：那些科学解不开的天坑之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548495.md#1">名画中的贞洁女子：卢克丽霞与苏珊娜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14553017.md#1">【军事情报局】M1战车开火 美上将访台</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14553021.md#1">【直播】布鲁斯主持国务院简报会（7/16）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14553005.md#1">【直播】万斯在宾州就《大而美法案》通过讲话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551354.md#1">肯德基推全新“回归计划”送免费炸鸡桶</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551371.md#1">茅台1935价格跌破600元 较高位时暴跌69%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551188.md#1">中国劣质电动车正大规模倾销尼泊尔</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552004.md#1">新庞德女郎 席德妮史威尼是最热门人选</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552328.md#1">杨颖与爱马仕总监合照 8岁儿“小海绵”抢镜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551497.md#1">耗资1亿 3天预售仅百万 陈佩斯《戏台》改档</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551417.md#1">窦靖童首次主演剧集 与母亲王菲合唱主题曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552273.md#1">向佐被爆欠赌债遭提告 名下有大陆公司停摆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14551754.md#1">别在花园里放蛋壳 改用这招对植物更好</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14552171.md#1">【厨娘香Q秀】芋泥蛋黄油葱鸡和蟹肉雨来菇炒蛋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/14/n14551214.md#1">除了滑手机 晚上还有10件事可以做</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/15/n14551574.md#1">美数十冰淇淋厂商：2028年前停用人工色素</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/16/n14552490.md#1">切完洋葱用这一物洗手 刺鼻气味就不会残留</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652088.md#1">【直播】众议院民主党领袖杰弗里斯举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/10/12/n14348960.htm">组图：纽约上州熊山出现罕见绚丽极光</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/10/12/n14348960.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
